@@ -1,3 +1,10 @@
+2008-03-20  Theppitak Karoonboonyanan  <thep@linux.thai.net>
+
+	* src/wordseg.cpp (main): duplicate tmpnam() results, instead of mere
+	pointer assignment, as the returned value is pointer to static buffer,
+	resulting in the same names for tmpin and tmpout. Fixing
+	non-functional '-u u,u' option. Bug report by Neutron Soutmun.
+
 2008-03-19  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
 	* src/abswordseg.cpp (AbsWordSeg::CreateWordList): Fix logical errors
